general.less: fix overflow problems

--- a/app/styles/shared/general.less
+++ b/app/styles/shared/general.less
@@ -1,7 +1,7 @@
 .page {
   position: relative;
   width: 1200px;
-  margin: 2em auto;
+  margin: 3em auto;
   background-color: @color-background;
   box-shadow: 0 0 100px 2px rgba(0, 0, 0, 0.12);
   border: 1px solid @color-border;
@@ -20,11 +20,11 @@ h1 {
 .github {
   .img-github;
   position: absolute;
-  opacity: 0.2;
-  width: 4em;
-  height: 4em;
   right: 30px;
   top: 45px;
+  width: 4em;
+  height: 4em;
+  opacity: 0.1;
   background-size: 2.5em;
   transition: transform 0.3s, opacity 0.3s;
 
